--- a/index.ipynb
+++ b/index.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "heroes_df = None\n",
+    "heroes_df = pd.read_csv('he')\n",
     "powers_df = None"
    ]
   },
@@ -412,7 +412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
